More and More achievements

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -348,4 +348,6 @@
     <string name="about_app_frequently_asked_questions">Perguntas Frequentes</string>
     <string name="cd_icon">icon</string>
     <string name="cd_download">download</string>
+    <string name="google_play_games_auth_failed">Autenticação com o Play Games falhou</string>
+    <string name="game_api_failed">Falhou ao conectar-se ao Play Games</string>
 </resources>
