--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -352,4 +352,8 @@
     <string name="unable_to_open_achievements">Unable to open achievements, try again later</string>
     <string name="title_flowchart">Flowchart</string>
     <string name="downloader_is_busy">The app is busy downloading something else</string>
+    <string name="you_need_to_update_play_services">Login failed. Maybe you need to update Google Play Services before using the resource</string>
+    <string name="play_services_error">Google Play Services error, send me an email with the error code so I\'ll know this error exists</string>
+    <string name="google_play_sign_in_cancelled">Login cancelled</string>
+    <string name="google_play_sign_in_currently_in_progress">There is a sign in currently in progress</string>
 </resources>
