--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -357,4 +357,6 @@
     <string name="play_services_error">Erro no Google Play Services, me mande um email com o código do erro para eu saber que este erro existe</string>
     <string name="google_play_sign_in_cancelled">Login com o Google Play cancelado</string>
     <string name="google_play_sign_in_currently_in_progress">Já existe um login sendo feito neste momento</string>
+    <string name="control_account_manager_sync">Sincronização por contas</string>
+    <string name="control_alarm_sync">Sincronização por Alarme</string>
 </resources>
