--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -359,4 +359,5 @@
     <string name="control_account_manager_sync">Sync with accounts</string>
     <string name="control_alarm_sync">Sync with alarm</string>
     <string name="visit_official_website">Visit official website</string>
+    <string name="title_suggestion">Comments and Suggestions</string>
 </resources>
