--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -360,4 +360,5 @@
     <string name="control_account_manager_sync">Sincronização por contas</string>
     <string name="control_alarm_sync">Sincronização por Alarme</string>
     <string name="visit_official_website">Visite o site oficial</string>
+    <string name="title_suggestion">Comentários e Sugestões</string>
 </resources>
