--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -392,4 +392,5 @@
     <string name="you_can_download_materials_yet">É possivel baixar os materiais!</string>
     <string name="universe_completed">A sua entrada no uneverso foi garantida. Espere mais atualizações</string>
     <string name="universe_building">Em construção...</string>
+    <string name="universe_alpha_open">O Universo é uma coletânea de recursos para os estudantes\n\nAvaliação dos Professores (AKA Barril de Boas)\nAchados e perdidos\nEventos da Universidade\nForuns de discussão para disciplinas\nEntre outros\n\nEstá em alpha 0.0.0 o que você vê aqui é uma miragem e definitivamente será modificado\n\nEstou trabalhando para que ele seja lancado na versão 6.0 :)</string>
 </resources>
