Translations + Linkify URL + Card Message + Don't confuse Access Update with logoff

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -360,4 +360,36 @@
     <string name="control_alarm_sync">Sync with alarm</string>
     <string name="visit_official_website">Visit official website</string>
     <string name="title_suggestion">Comments and Suggestions</string>
+    <string name="uneverse_welcome">The UNEVerse</string>
+    <string name="uneverse_know_more">Know More</string>
+    <string name="uneverse_first_steps">First Steps</string>
+    <string name="universe_create_account">Create Account</string>
+    <string name="login_repeat_password">Repeat Password</string>
+    <string name="or">Or</string>
+    <string name="universe_connect_using_facebook">Log in with Facebook</string>
+    <string name="universe_create_account_next_step">Next</string>
+    <string name="universe_create_account_cancel">Cancel</string>
+    <string name="universe_create_account_description">This account will be used to access the Uneverse</string>
+    <string name="universe_login_account">Login</string>
+    <string name="universe_login_account_description">Use your UNEVerse account to continue</string>
+    <string name="universe_loading">Loading</string>
+    <string name="the_universe">UNEVerse</string>
+    <string name="unable_to_calculate_mean">NaN - Unavailable</string>
+    <string name="a_series_of_question_marks">Disney</string>
+    <string name="you_cant_download_materials_yet">It\'s still not possible to download materials</string>
+    <string name="accessing_universe">Accessing the UNEVerse</string>
+    <string name="configuring_universe">Configuring your UNIVerse account</string>
+    <string name="title_outdated_version">Outdated</string>
+    <string name="disabled_code_warning">This UNES version is really outdated. New features where introduced and this version can not access them. Please, update the app on PlayStore to continue using the app</string>
+    <string name="update_app">Update</string>
+    <string name="universe_account_already_exists">The account was already created, log in</string>
+    <string name="universe_connection_error">Failed to create account...</string>
+    <string name="universe_login_btn">Login</string>
+    <string name="materials_download_failed">Failed defining classes</string>
+    <string name="select_a_material">Select a file</string>
+    <string name="you_can_download_materials_yet">It\'s not possible to download files</string>
+    <string name="universe_completed">Your UNEVerse spot is confirmed. wait for new updates</string>
+    <string name="universe_building">Building...</string>
+    <string name="universe_alpha_open">The Universe is a set of resources for the students.\nTeacher Evaluation\nLost and Found\nUniversity Events\nDiscussion Forums for Classes.\n\nIt's still under construction, all you see here is a mirage</string>
+    <string name="class_helper_materials">Helper Files</string>
 </resources>
