Get Ready for next update

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -409,4 +409,5 @@
     <string name="crown">Crown</string>
     <string name="under_tests">Alpha testing phase (Viability)</string>
     <string name="chat">Chat</string>
+    <string name="title_alpha_testing">Alpha Testing</string>
 </resources>
