--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -413,4 +413,14 @@
     <string name="chat">Chat</string>
     <string name="title_alpha_testing">Teste Alfa</string>
     <string name="control_worker_sync">Sincronização por Serviço</string>
+    <string name="unes_edition">Edição UNES</string>
+    <string name="game2048">2048</string>
+    <string name="score">Pontuação</string>
+    <string name="zero">0</string>
+    <string name="high_score">Maior</string>
+    <string name="you_win">Você Venceu!</string>
+    <string name="game_over">Fim de Jogo</string>
+    <string name="start_new_game">Iniciar novo jogo</string>
+    <string name="undo">Desfazer</string>
+    <string name="reset">Reiniciar</string>
 </resources>
