--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -403,5 +403,6 @@
     <string name="game_over">Game Over</string>
     <string name="start_new_game">Starts new game</string>
     <string name="undo">Undo</string>
-
+    <string name="uneverse">UNEVerse</string>
+    <string name="available_quota">Amount remaining (approximated)</string>
 </resources>
