--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -410,5 +410,9 @@
     <string name="uneverse">UNEVerso</string>
     <string name="available_quota">Cotas restantes (aproximadamente)</string>
     <string name="event_image">Imagem do Evento</string>
-
+    <string name="event_date">Data</string>
+    <string name="event_price_format">A entrada custa R$ %.2f</string>
+    <string name="event_start_time_format">Começa às %1$s</string>
+    <string name="event_start_date_format">Evento inicia no dia %1$s</string>
+    <string name="event_is_free">A entrada do evento é gratuita</string>
 </resources>
