Event Creation Fragment Parts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -418,4 +418,38 @@
     <string name="event_card_announcement">Aqui você encontra os eventos que estão ocorrendo na Universidade</string>
     <string name="no_events_created_yet">Sem eventos cadastrados, por enquanto</string>
     <string name="nav_title_events">Eventos</string>
+    <string name="publish_your_event_on_unes">Publique seu evento no UNES para que todos possam encontrar ver :)</string>
+    <string name="event_continue">Continuar</string>
+    <string name="event_publish_approval_message">Antes de serem postados, os eventos passam por uma fase de aprovação para evitar publicações ofensivas :v</string>
+    <string name="event_title_edit_hint">Título do Evento</string>
+    <string name="event_short_description_edit_hint">Descrição curta</string>
+    <string name="event_part_one_message">Vamos começar pelo início</string>
+    <string name="event_basic_information_text">Algumas informações básicas sobre o evento</string>
+    <string name="event_title_too_short">O título do evento deve ter pelo menos 4 letras</string>
+    <string name="event_short_description_too_short">A descrição curta deve ter pelo menos 4 letras</string>
+    <string name="event_part_two_message">Como é o evento?</string>
+    <string name="event_image_and_more_information">Preciso de mais algumas informações sobre o evento</string>
+    <string name="event_long_description_hint">Descrição Longa</string>
+    <string name="event_location_hint">Local</string>
+    <string name="event_start_date_hint">Data de Início</string>
+    <string name="event_start_time_hint">Horário de Início</string>
+    <string name="event_location">Local</string>
+    <string name="validation_error_format">Deve ter pelo menos %1$d caracteres</string>
+    <string name="date_format">%1$d/%2$d/%3$d</string>
+    <string name="time_format">%1$d:%2$d</string>
+    <string name="event_date_start_dialog">Data de início</string>
+    <string name="event_time_start_dialog">Horário de Início</string>
+    <string name="event_payment_and_certificate">Quanto custa e o que as pessoas ganham?</string>
+    <string name="event_part_three_message">Estamos quase terminando</string>
+    <string name="event_price_hint">Preço</string>
+    <string name="event_hours_hint">Carga Horária</string>
+    <string name="event_ticket_free_cb">A entrada do evento é gratuita</string>
+    <string name="event_hours_certificate_cb">O evento dá certificado de carga horária</string>
+    <string name="event_organization_hint">Organização</string>
+    <string name="event_organization_definition">Organização é o provedor do evento. Exemplo: DA de Engenharia de Computação</string>
+    <string name="double_format">%.2f</string>
+    <string name="integer_format">%1$d</string>
+    <string name="event_invalid_price">Preço incorreto</string>
+    <string name="event_invalid_hours">Quantidade de horas inválida</string>
+    <string name="event_failed_parse_number">Você colocou uma letra onde deveria ser apenas números?</string>
 </resources>
