--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -472,7 +472,7 @@
     <string name="loading_courses_list">Carregando lista de cursos</string>
     <string name="failed_loading_courses">Falha ao carregar cursos :(</string>
     <string name="course_selection">Curso Selecionado</string>
-    <string name="course_selection_help">___btn_click_help_course___</string>
+    <string name="course_selection_help">Selecionar seu curso faz com que o UNES seja capaz de te enviar mensagens que o seu colegiado ou professores mandarem.</string>
     <string name="ok">Ok</string>
     <string name="confirm">Confirmar</string>
     <string name="course_selected">Você selecionou o curso %1$s</string>
